--- a/index.html
+++ b/index.html
@@ -18,20 +18,13 @@
         <nav id="lado">
             <ul>
                 <a href="index.html" id="sl"><li>HOME</li></a>
-                <a href="#" id="sl"><li>ABOUT</li></a>
-                <a href="#" id="sl"><li>CONTACT US</li></a>
-                <a href="#" id="sl"><li>SERVICES</li></a>
-                <a href="#" id="sl"><li>FEEDBACK</li></a>
+                <a href="d'scodes.html" id="sl"><li>ABOUT</li></a>
+                <a href="bridge.html" id="sl"><li>CONTACT US</li></a>
+                <a href="pixelgrade.html" id="sl"><li>SERVICES</li></a>
+                <a href="Whogohost.html" id="sl"><li>FEEDBACK</li></a>
             </ul>
         </nav>
-        <nav id="mado">
-            <a href="index.html" id="jl">page 1</a>
-            <a href="d'scodes.html" id="jl">page 2</a>
-            <a href="bridge.html" id="jl">page 3</a>
-            <a href="pixelgrade.html" id="jl">page 4</a>
-            <a href="Whogohost.html" id="jl">page 5</a>
-
-        </nav>
+       
         
     </div>
             <button class="yh">
