--- a/Whogohost.html
+++ b/Whogohost.html
@@ -12,22 +12,15 @@
         <a href="index.html" id="nora"><h1> <i class="fa-solid fa-house-chimney"></i>Whogohost</h1></a>
          <ul>
              <a href="index.html" id="max"><li>home</li></a>
-             <a href="" id="max"><li>about</li></a>
-             <a href="" id="max"><li>services</li></a>
-             <a href="" id="max"><li>contact us</li></a>
-             <a href="" id="max"><li>feedback</li></a>
+             <a href="d'scodes.html" id="max"><li>about</li></a>
+             <a href="bridge.html" id="max"><li>services</li></a>
+             <a href="pixelgrade.html" id="max"><li>contact us</li></a>
+             <a href="Whogohost.html" id="max"><li>feedback</li></a>
              
          </ul>
     </nav>
     <img src="whog.jfif" alt="" width="100%" height="500">
-    <nav id="mado">
-        <a href="index.html" id="jl">page 1</a>
-        <a href="d'scodes.html" id="jl">page 2</a>
-        <a href="bridge.html" id="jl">page 3</a>
-        <a href="pixelgrade.html" id="jl">page 4</a>
-        <a href="Whogohost.html" id="jl">page 5</a>
-
-    </nav>
+    
    
 
 
