--- a/bridge.html
+++ b/bridge.html
@@ -65,26 +65,7 @@
             box-shadow: 9px 9px 10px  rgb(3, 3, 135);
         }
            /* mado nav\ */
-#mado{
-    background: blue;
-    width: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 90px;
-    position: fixed;
-    left: 30px;
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 20px;
-}
-#jl{
-    margin-right: 10px;
-    text-decoration: none;
-    color: rgba(204, 180, 212, 255);
-    font-size: 20px;
-    text-transform: capitalize;
-}   
+  
 
 
 
@@ -162,23 +143,15 @@
        <a href="index.html" id="nora"><h1> <i class="fa-solid fa-house-chimney"></i>BRIDGE</h1></a>
         <ul>
             <a href="index.html" id="max"><li>home</li></a>
-            <a href="" id="max"><li>about</li></a>
-            <a href="" id="max"><li>services</li></a>
-            <a href="" id="max"><li>contact us</li></a>
-            <a href="" id="max"><li>feedback</li></a>
+            <a href="d'scodes.html" id="max"><li>about</li></a>
+            <a href="bridge.html" id="max"><li>services</li></a>
+            <a href="pixelgrade.html" id="max"><li>contact us</li></a>
+            <a href="Whogohost.html" id="max"><li>feedback</li></a>
             
         </ul>
     </nav>
     <img src="bridge.jpg" alt="" height="300" width="100%">
-    <nav id="mado">
-        <a href="index.html" id="jl">page 1</a>
-        <a href="d'scodes.html" id="jl">page 2</a>
-        <a href="bridge.html" id="jl">page 3</a>
-        <a href="pixelgrade.html" id="jl">page 4</a>
-        <a href="Whogohost.html" id="jl">page 5</a>
-
-    </nav>
-
+    
     <div id="man">  
         <h1 id="u">Grow your business <br> with Brigde</h1>
         <h5 id="p">Brigde provides cutting-Edge E-commerce,<br> 
