--- a/d'scodes.html
+++ b/d'scodes.html
@@ -28,6 +28,8 @@
             </li>
             <li class="drop"><a href="bridge.html">SERVICES</a></li>
             <li class="drop"><a href="pixelgrade.html">CONTACT US</a></li>
+            <li class="drop"><a href="pixelgrade.html">PRODUCTS</a></li>
+            <li class="drop"><a href="pixelgrade.html">OUR MISSION</a></li>
             <li class="drop"><a href="Whogohost.html">FEEDBACK US</a></li>
 
 
@@ -108,7 +110,7 @@
 
         .dis li:hover {
             background: rgb(1, 79, 1);
-            padding: 9px 10px;
+            padding: 7px 9px;
             border-radius: 10px;
 
         }
