--- a/Whogohost.html
+++ b/Whogohost.html
@@ -12,9 +12,11 @@
         <a href="index.html" id="nora"><h1> <i class="fa-solid fa-house-chimney"></i>Whogohost</h1></a>
          <ul>
              <a href="index.html" id="max"><li>home</li></a>
-             <a href="d'scodes.html" id="max"><li>about</li></a>
-             <a href="bridge.html" id="max"><li>services</li></a>
-             <a href="pixelgrade.html" id="max"><li>contact us</li></a>
+             <a href="bizg.html" id="max"><li>about</li></a>
+             <a href="fcmb.html" id="max"><li>services</li></a>
+             <a href="d'scodes.html" id="max"><li>contact us</li></a>
+             <a href="bridge.html" id="max"><li>products</li></a>
+             <a href="pixelgrade.html" id="max"><li>our mission</li></a>
              <a href="Whogohost.html" id="max"><li>feedback</li></a>
              
          </ul>
