--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
             </li>
             <li class="drop"><a href="bridge.html">SERVICES</a></li>
             <li class="drop"><a href="pixelgrade.html">CONTACT US</a></li>
+            <li class="drop"><a href="pixelgrade.html">PRODUCTS</a></li>
+            <li class="drop"><a href="pixelgrade.html">OUR MISSION</a></li>
             <li class="drop"><a href="Whogohost.html">FEEDBACK US</a></li>
 
 
@@ -35,7 +37,7 @@
 
         </ol>
     </nav>
-    </nav>
+
     <img src="about us img.png" alt="IM" width="100%" height="300">
     <style>
         table {
@@ -92,7 +94,7 @@
 
         .nav .fis {
             display: flex;
-            list-style: ;
+            
 
 
         }
@@ -118,9 +120,10 @@
         }
 
         .dis li:hover {
-            background:  rgb(1, 79, 1);
+            background: rgb(1, 79, 1);
+            padding: 7px 9px;
             border-radius: 10px;
-            padding: 10px 20px;
+
         }
 
         .dis {
@@ -135,6 +138,7 @@
         .drop:hover {
             background: rgb(1, 79, 1);
             padding: 8px;
+            border-radius: 10px;
         }
 
         .about:hover .dis {
