--- a/bridge.html
+++ b/bridge.html
@@ -40,7 +40,7 @@
         #max{
             color: white;
             text-decoration: none;
-            font-size: 25px;
+            font-size: 22px;
             text-transform: uppercase;
         }
         #max:hover{
@@ -143,9 +143,11 @@
        <a href="index.html" id="nora"><h1> <i class="fa-solid fa-house-chimney"></i>BRIDGE</h1></a>
         <ul>
             <a href="index.html" id="max"><li>home</li></a>
-            <a href="d'scodes.html" id="max"><li>about</li></a>
-            <a href="bridge.html" id="max"><li>services</li></a>
-            <a href="pixelgrade.html" id="max"><li>contact us</li></a>
+            <a href="bizg.html" id="max"><li>about</li></a>
+            <a href="fcmb.html" id="max"><li>services</li></a>
+            <a href="d'scodes.html" id="max"><li>contact us</li></a>
+            <a href="bridge.html" id="max"><li>products</a>
+            <a href="pixelgrade.html" id="max"><li>our mission</li></a>
             <a href="Whogohost.html" id="max"><li>feedback</li></a>
             
         </ul>
